[tool.poetry]
name = "devasc-dev"
version = "0.1.0"
description = ""
authors = ["pke11y"]

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^2.8.6"
pyyaml = "^5.1.2"
jinja2 = "^2.10.3"
cryptography = "^2.8"  # could also be pycrypto
docker = "^4.3.0"
pynetbox = "^5.0.5"
jmespath = "^0.10.0"
netaddr = "^0.8.0"
pprintpp = "^0.4.0"
pyats = "^20.9"
requests = "^2.24.0"
black = "^20.8b1"
ncclient = "^0.6.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
